--- a/frontend/src/app/website/components/website/website.component.html
+++ b/frontend/src/app/website/components/website/website.component.html
@@ -94,14 +94,9 @@
             <div class="footer-widget-heading">
               <h3>Návody</h3>
             </div>
-            <ul class="list">
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/services.html">Web Design</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/services.html">App Developemnt</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/services.html">Cloud Services</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/services.html">Domain adn Hosting</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/services.html">Seo Optimization</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/services.html">Social Media</a></li>
-            </ul>
+<!--            <ul class="list">-->
+<!--              <li><a href="https://zrtechsolutions.com/demo/html/technoit/services.html">Web Design</a></li>-->
+<!--            </ul>-->
           </div>
         </div>
         <div class="col-lg-2 col-md-6 col-sm-12 footer-column">
