--- a/frontend/src/app/website/components/website/website.component.html
+++ b/frontend/src/app/website/components/website/website.component.html
@@ -14,6 +14,12 @@
 
 
   <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&amp;family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&amp;family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&amp;display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&amp;display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&amp;display=swap" rel="stylesheet">
 
 
 
@@ -50,8 +56,8 @@
     <div>
       <a href="{{systemInfoService.getAdminHostname()}}" class="btn-get-started me-3">Přihlásit</a>
       <a href="{{systemInfoService.getAdminHostname()}}/authorization/registration" class="btn-get-started">Zaregistrovat</a>
-      <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
-      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+      <i class="mobile-nav-toggle mobile-nav-show bi bi-list fa fa-bars"></i>
+      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x fa fa-bars"></i>
     </div>
   </div>
 </header>
@@ -105,17 +111,7 @@
               <h3>Stránky</h3>
             </div>
             <ul class="list">
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/about.html">About</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/packages.html">Pricing</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/team.html">Team</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/porfolio.html">Portfolio</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/faq.html">FAQs</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/team.html">Team</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/blogs.html">Blogs</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/blogs-details.html">Blog Details</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/coming-soon.html">Coming Soon</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/privacy-policy.html">Terms &amp; Conditions</a></li>
-              <li><a href="https://zrtechsolutions.com/demo/html/technoit/privacy-policy.html">Privacy Policy</a></li>
+              <li><a routerLink="/preview">Ukázky</a></li>
             </ul>
           </div>
         </div>
