--- a/frontend/src/app/website/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/website/pages/dashboard/dashboard.component.html
@@ -28,7 +28,8 @@
   <section>
     <div class="container" id="featured">
       <div class="section-header aos-init " data-aos="fade-up" data-aos-delay="100">
-        <h2>Co je vlastně ten <span class="logo"><span class="first">Net</span><span class="second">Dropper</span></span>?</h2>
+        <h2 class="aloha">Co je vlastně ten <span class="logo"><span class="first">Net</span><span class="second">Dropper</span></span>?</h2>
+        <i class="fa fa-bars"></i>
         <p>NetDropper je unikátní platforma pro snadnou tvorbu internetových stránek.
           Tento systém drag&drop umožňuje uživatelům jednoduše sestavit web pomocí přetahování prvků, jako jsou texty, obrázky nebo videa, přímo na pracovní plochu. Uživatelé si mohou vybírat z přednastavených šablon a komponent, které pak intuitivně upravují podle svých potřeb. Tento systém nevyžaduje žádné programovací znalosti a poskytuje okamžitý náhled na výsledný design. Funkcionality jako změna velikosti, barvy a rozložení prvků jsou snadno dostupné přímo v editoru. Výsledkem je rychlá a efektivní tvorba webových stránek i pro začátečníky bez znalosti jakéhokoliv programovacího jazyka.
         </p>
