--- a/frontend/src/app/website/pages/preview/preview.component.html
+++ b/frontend/src/app/website/pages/preview/preview.component.html
@@ -16,53 +16,50 @@
   <div class="single-page">
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio">
-      <div class="container aos-init aos-animate" data-aos="fade-up">
-        <div class="portfolio-isotope aos-init aos-animate" data-portfolio-filter="*" data-portfolio-layout="masonry" data-portfolio-sort="original-order" data-aos="fade-up" data-aos-delay="100">
-          <div>
-            <ul class="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App Design</li>
-              <li data-filter=".filter-product">App Development</li>
-              <li data-filter=".filter-branding">Branding</li>
-              <li data-filter=".filter-books">It Solutions</li>
-            </ul><!-- End Portfolio Filters -->
-          </div>
-
+      <div class="container aos-init " data-aos="fade-up">
+        <div class="section-header">
+          <h2>Ukázky vytvořených webů</h2>
+          <p>Zde naleznete ukázky několika webů, které jsou vytvořené v našem systému <span class="logo"><span class="first">Net</span><span class="second-black">Dropper</span></span>.
+          I vy si můžete vytvořit vlastní web tak neváhejte.
+            <a href="{{systemInfoService.getAdminHostname()}}" class="btn-get-started mr-20 aos-init mt-2" data-aos="fade-up" data-aos-delay="800">Vytvořit web</a>
+          </p>
+        </div>
+        <div class="portfolio-isotope aos-init " data-portfolio-filter="*" data-portfolio-layout="masonry" data-portfolio-sort="original-order" data-aos="fade-up" data-aos-delay="100">
           <div class="row gy-4 portfolio-container" style="position: relative; height: 555.812px;">
 
             <div class="col-xl-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
               <div class="portfolio-wrap">
-                <a href="./Technoit - IT Solutions &amp; Business Services Multipurpose Responsive Website Template_files/product-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="./Technoit - IT Solutions &amp; Business Services Multipurpose Responsive Website Template_files/product-1.jpg" class="img-fluid" alt=""></a>
+                <a href="/assets/website/product-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="/assets/website/product-1.jpg" class="img-fluid" alt=""></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-4 col-md-6 portfolio-item filter-product" style="position: absolute; left: 380px; top: 0px;">
               <div class="portfolio-wrap">
-                <a href="./Technoit - IT Solutions &amp; Business Services Multipurpose Responsive Website Template_files/product-2.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="./Technoit - IT Solutions &amp; Business Services Multipurpose Responsive Website Template_files/product-2.jpg" class="img-fluid" alt=""></a>
+                <a href="/assets/website/product-2.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="/assets/website/product-2.jpg" class="img-fluid" alt=""></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-4 col-md-6 portfolio-item filter-branding" style="position: absolute; left: 760px; top: 0px;">
               <div class="portfolio-wrap">
-                <a href="./Technoit - IT Solutions &amp; Business Services Multipurpose Responsive Website Template_files/product-3.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="./Technoit - IT Solutions &amp; Business Services Multipurpose Responsive Website Template_files/product-3.jpg" class="img-fluid" alt=""></a>
+                <a href="/assets/website/product-3.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="/assets/website/product-3.jpg" class="img-fluid" alt=""></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-4 col-md-6 portfolio-item filter-books" style="position: absolute; left: 0px; top: 277.906px;">
               <div class="portfolio-wrap">
-                <a href="./Technoit - IT Solutions &amp; Business Services Multipurpose Responsive Website Template_files/product-4.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="./Technoit - IT Solutions &amp; Business Services Multipurpose Responsive Website Template_files/product-4.jpg" class="img-fluid" alt=""></a>
+                <a href="/assets/website/product-4.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="/assets/website/product-4.jpg" class="img-fluid" alt=""></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 380px; top: 277.906px;">
               <div class="portfolio-wrap">
-                <a href="./Technoit - IT Solutions &amp; Business Services Multipurpose Responsive Website Template_files/product-5.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="./Technoit - IT Solutions &amp; Business Services Multipurpose Responsive Website Template_files/product-5.jpg" class="img-fluid" alt=""></a>
+                <a href="/assets/website/product-5.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="/assets/website/product-5.jpg" class="img-fluid" alt=""></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-4 col-md-6 portfolio-item filter-branding" style="position: absolute; left: 760px; top: 277.906px;">
               <div class="portfolio-wrap">
-                <a href="./Technoit - IT Solutions &amp; Business Services Multipurpose Responsive Website Template_files/product-6.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="./Technoit - IT Solutions &amp; Business Services Multipurpose Responsive Website Template_files/product-6.jpg" class="img-fluid" alt=""></a>
+                <a href="/assets/website/product-6.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="/assets/website/product-6.jpg" class="img-fluid" alt=""></a>
               </div>
             </div><!-- End Portfolio Item -->
           </div><!-- End Portfolio Container -->
