--- a/frontend/src/app/page/components/page-block/template-block-dialog/template-block-dialog.component.html
+++ b/frontend/src/app/page/components/page-block/template-block-dialog/template-block-dialog.component.html
@@ -2,7 +2,7 @@
   <ng-container title>Uložení bloku jako šablony</ng-container>
   <ng-container content>
     <label for="category-select" class="form-label">Vyberte kategorii: </label>
-    <select [(ngModel)]="sendData.selectedCategory" id="category-select" class="form-select">
+    <select [(ngModel)]="sendData.selectedCategory" id="category-select" class="form-select" required>
       <option *ngFor="let cat of category" [value]="cat.id">{{cat.name}}</option>
     </select>
     <br>
