--- a/frontend/src/app/core/directives/form-error/input-form-error/tools/components/error-message/error-message.component.html
+++ b/frontend/src/app/core/directives/form-error/input-form-error/tools/components/error-message/error-message.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let errorKey of objectKeys(errors)">
-  <div class="validation-error-message small">{{getMessage(errorKey, errors)}}</div>
+<div *ngFor="let errorKey of objectKeys(control.errors ?? [])">
+  <div class="validation-error-message small">{{getMessage(errorKey, control.errors)}}</div>
 </div>
