--- a/frontend/src/app/authorization/pages/authorization/authorization.component.html
+++ b/frontend/src/app/authorization/pages/authorization/authorization.component.html
@@ -1,5 +1,5 @@
 <mat-progress-bar appHiderElement [showOn]="symfonyApiCallEvent.startSendLogin" [hideOn]="symfonyApiCallEvent.stopSendLogin" class="progres-line" mode="indeterminate"></mat-progress-bar>
-<div class="js-fullheight img">
+<div class="js-fullheight img" id="particles-js">
   <section class="ftco-section">
     <div class="container">
       <router-outlet></router-outlet>
