--- a/frontend/src/app/authorization/components/login/login.component.html
+++ b/frontend/src/app/authorization/components/login/login.component.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div class="row justify-content-center">
-  <div class="col-md-6 col-lg-4">
+  <div class="col-md-6 col-lg-4 reg-login-form">
     <div class="login-wrap p-0">
       <h3 class="mb-4 text-center">Vyplňte email a heslo</h3>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="signin-form">
