--- a/frontend/src/app/website/pages/dashboard/dashboard.component.css
+++ b/frontend/src/app/website/pages/dashboard/dashboard.component.css
@@ -9,3 +9,18 @@
 .aloha::before {
   content: "\f0c9";
 }
+
+#hero {
+  font-family: "Lato", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.8;
+  font-weight: normal;
+  color: gray;
+  position: relative;
+  z-index: 0;
+  padding: 0;
+  background-image: url("/assets/shared/image/nasa2.jpg");
+  background-size: cover; /* or "contain" depending on what you want */
+  background-position: center center;
+  background-repeat: no-repeat;
+}
