--- a/frontend/src/app/page/components/page-block/page-block/page-block.component.html
+++ b/frontend/src/app/page/components/page-block/page-block/page-block.component.html
@@ -1,4 +1,5 @@
 <div class="block"
+     [attr.id] = "pageBlock.uniqueId"
      [style]="getStyles()"
      [style.background-image]="pageBlock.backgroundImage ? 'url(' + pageBlock.backgroundImage + ')' : ''"
      [style.background-color]="pageBlock.backgroundColor"
