--- a/frontend/src/app/plugins/menu/components/menu/menu.component.html
+++ b/frontend/src/app/plugins/menu/components/menu/menu.component.html
@@ -10,7 +10,7 @@
     <div class=" collapse navbar-collapse" id="navbarNavDropdown">
       <ul [class]="['navbar-nav', 'ms-auto']">
         <li [class.dropdown]="item.children" class="nav-item" *ngFor="let item of itemsAsNestedArray; let i = index">
-          <a appLinkDeactivate [id]="'dropdown'+i" [attr.data-bs-toggle]="item.children.length ? 'dropdown' : ''" [class.dropdown-toggle]="item.children.length" class="nav-link mx-2" aria-current="page" href="/{{item.pageDetail.isHomepage ? '' : item.pageDetail.pageUrl}}">{{item.name}}</a>
+          <a appLinkDeactivate [id]="'dropdown'+i" [attr.data-bs-toggle]="item.children.length ? 'dropdown' : ''" [class.dropdown-toggle]="item.children.length" class="nav-link mx-2" aria-current="page" href="{{getLink(item)}}">{{item.name}}</a>
           <ng-container *ngTemplateOutlet="dropdown; context: {items: item.children, index: i}"></ng-container>
         </li>
       </ul>
@@ -20,7 +20,11 @@
 <ng-template #dropdown let-items='items' let-index='index'>
   <ul *ngIf="items" class="dropdown-menu" [attr.aria-labelledby]="'dropdown'+index">
     <li *ngFor="let item of items">
-      <a appLinkDeactivate class="dropdown-item" href="/{{item.pageDetail.isHomepage ? '' : item.pageDetail.pageUrl}}">{{item.name}}</a>
+      @if (item.uniqueId) {
+        <a appLinkDeactivate class="dropdown-item" href="#{{item.uniqueId}}">{{item.name}}</a>
+      } @else {
+        <a appLinkDeactivate class="dropdown-item" href="/{{item.pageDetail.isHomepage ? '' : item.pageDetail.pageUrl}}">{{item.name}}</a>
+      }
     </li>
   </ul>
 </ng-template>
