--- a/frontend/src/app/page/pages/page-list/page-list.component.html
+++ b/frontend/src/app/page/pages/page-list/page-list.component.html
@@ -16,7 +16,8 @@
         <th mat-header-cell *matHeaderCellDef class="text-end">Akce</th>
         <td mat-cell *matCellDef="let element" class="text-end">
           <a [routerLink]="['../update', element.id]"><i class="material-icons">settings</i>nastavení</a> |
-          <a [routerLink]="['../page-builder', element.id]"><i class="material-icons">list</i>Editace stránky</a> |
+          <a class="link-success" [routerLink]="['../page-builder', element.id]"><i class="material-icons">list</i>Editace stránky</a> |
+          <a (click)="clone(element)" class="link-info"><mat-icon fontIcon="content_copy"></mat-icon>klonovat</a> |
           <a (click)="openRemoveWebDialog(element.id)" class="text-danger"><i
             class="material-icons">delete</i>smazat</a>
         </td>
