--- a/frontend/src/app/plugins/gallery/pages/gallery-size-admin/gallery-size-admin.component.html
+++ b/frontend/src/app/plugins/gallery/pages/gallery-size-admin/gallery-size-admin.component.html
@@ -2,8 +2,8 @@
   <div class="card-body">
     <form [formGroup]="adminForm">
       <div class="row">
-        <div class="col-md-4">
-          <div class="border border-inner">
+        <div class="col-md-12 border border-inner">
+          <div class="form-group">
             <label for="height">Výška miniatur (px)</label>
             <input id="height" formControlName="thumbnailHeight" type="number" class="form-control">
           </div>
@@ -12,4 +12,5 @@
     </form>
   </div>
 </div>
+
 
