--- a/frontend/src/app/plugins/menu/pages/menu-logo-admin/menu-logo-admin.component.html
+++ b/frontend/src/app/plugins/menu/pages/menu-logo-admin/menu-logo-admin.component.html
@@ -1,21 +1,20 @@
 <div class="card">
-  <form [formGroup]="adminForm">
   <div class="card-body">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="border border-inner form-group input-group-sm me-3">
-          <label for="interval">Název</label>
-          <input id="interval" formControlName="logoName" type="text" class="form-control">
+    <form [formGroup]="adminForm">
+      <div class="row">
+        <div class="col-md-6 border border-inner left">
+          <div class="form-group">
+            <label for="interval">Název</label>
+            <input id="interval" formControlName="logoName" type="text" class="form-control">
+          </div>
+        </div>
+        <div class="col-md-6 border border-inner">
+            <app-image-input [miniature]="true" [path]="settings.logoImage" (imagePath)="updateImage($event)"></app-image-input>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="border border-inner">
-        <app-image-input [miniature]="true" [path]="settings.logoImage" (imagePath)="updateImage($event)"></app-image-input>
-        </div>
-      </div>
-    </div>
+    </form>
   </div>
-  </form>
 </div>
+
 
 
