--- a/frontend/src/app/plugins/image/pages/image-admin/image-admin.component.html
+++ b/frontend/src/app/plugins/image/pages/image-admin/image-admin.component.html
@@ -1,12 +1,10 @@
 <div class="card">
   <div class="card-body">
     <form [formGroup]="adminForm">
-      <div class="row">
-        <div class="col-md-6">
+      <div class="d-flex justify-content-center flex-wrap">
           <div class="border border-inner">
             <app-image-input [miniature]="true" [path]="settings.imagePath" (imagePath)="updateImage($event)"></app-image-input>
           </div>
-        </div>
       </div>
     </form>
   </div>
