--- a/frontend/src/app/plugins/image/pages/style-admin/style-admin.component.html
+++ b/frontend/src/app/plugins/image/pages/style-admin/style-admin.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-body">
-    <div class="d-flex flex-md-row flex-wrap">
+    <div class="border border-inner d-flex flex-md-row justify-content-center flex-wrap">
       <div class="p-2">
         <div>Zaoblení:</div>
         <mat-slider
