--- a/frontend/src/app/plugins/shared/components/admin-pages/link-admin/link-admin.component.html
+++ b/frontend/src/app/plugins/shared/components/admin-pages/link-admin/link-admin.component.html
@@ -3,7 +3,7 @@
     <form [formGroup]="adminForm">
       <div class="row">
         <div class="col-md-6">
-          <div class="border border-inner">
+          <div class="form-group border border-inner">
             <label for="type" class="form-label">Typ odkazu:</label>
             <select class="form-select" id="type" formControlName="linkType">
               <option selected [ngValue]="null">Vyberte Typ odkazu...</option>
@@ -14,7 +14,7 @@
         <div class="col-md-6">
           <div [ngSwitch]="settings.linkType">
             <div *ngSwitchCase="1">
-              <div class="border border-inner">
+              <div class="form-group border border-inner">
                 <label for="page" class="form-label">Vyberte stránku:</label>
                 <select class="form-control" id="page" formControlName="pageId">
                   <option [ngValue]="null" disabled>Vyberte stránku...</option>
@@ -23,13 +23,13 @@
               </div>
             </div>
             <div *ngSwitchCase="2">
-              <div class="border border-inner">
+              <div class="form-group border border-inner">
                 <label for="url" class="form-label">Zadejte URL:</label>
                 <input placeholder="Např: https://www.youtube.com" type="text" class="form-control" id="url" formControlName="externalUrl">
               </div>
             </div>
             <div *ngSwitchCase="3">
-              <div class="border border-inner">
+              <div class="form-group border border-inner">
                 <label for="file" class="form-label">Vyberte soubor:</label>
                 <button (click)="openFileManager()" mat-raised-button color="primary" class="my-2" id="file">
                   <mat-icon>cloud_upload</mat-icon>Vybrat Soubor
